* Remove unnecessary config changes.